[tool.poetry]
name = "pylambdarest"
version = "0.3.0rc1"
license = "MIT"
description = "Lightweight framework for building REST API using AWS Lambda + API Gateway"
authors = ["Marwan Debbiche (Macbook Pro) <marwan.debbiche@gmail.com>"]
homepage = "https://github.com/MarwanDebbiche/pylambdarest"
repository = "https://github.com/MarwanDebbiche/pylambdarest"
documentation = "https://pylambdarest.readthedocs.io"
readme = "README.md"
keywords = ["aws-lambda", "serverless", "api-gateway", "rest-api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.7.2"
jsonschema = "^3.2.0"
simplejson = "^3.17.2"

[tool.poetry.group.auth]
optional = true
[tool.poetry.group.auth.dependencies]
PyJWT = "^2.6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
pylint = "^2.15.5"
pre-commit = "^2.20.0"
black = "^22.10.0"
coverage = "^6.5.0"
coveralls = "^3.3.1"
mypy = "^0.982"
sphinx-rtd-theme = "^1.0.0"
m2r = "0.2.1"
sphinx = "2.*"
types-simplejson = "^3.17.7.1"
types-jwt = "^0.1.3"
mistune = "0.8.4"
jinja2 = "3.0.*"


[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79


[[tool.mypy.overrides]]
module = "pylambdarest"
ignore_missing_imports = true
