[tool.poetry]
name = "restful-aws-lambda"
version = "0.1.1"
license = "MIT"
description = "Lightweight framework for building REST API using AWS Lambda + API Gateway"
authors = ["Joffrey Bienvenu <joffreybvn@gmail.com>"]
homepage = "https://github.com/Joffreybvn/restful-aws-lambda"
repository = "https://github.com/Joffreybvn/restful-aws-lambda"
documentation = "https://restful-aws-lambda.readthedocs.io"
readme = "README.md"
keywords = ["aws-lambda", "serverless", "api-gateway", "rest-api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
pylint = "*"
pre-commit = "^2.20.0"
black = "^22.10.0"
coverage = "^6.5.0"
coveralls = "^3.3.1"
mypy = "^0.982"
sphinx-rtd-theme = "^1.1.1"
m2r = "^0.3.1"
sphinx = "4.3.2"

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
