[tool.poetry]
name = "pylambdarest-sample"
version = "0.0.1"
description = "Sample project using pylambdarest"
authors = ["Marwan Debbiche (Macbook Pro) <marwan.debbiche@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylambdarest = {path= "./.."}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
