[tool.poetry]
name = "restful-aws-lambda-sample"
version = "0.0.1"
description = "Sample project using restful-aws-lambda"
authors = ["Joffrey Bienvenu <joffreybvn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
restful_aws_lambda = "^0.1.0"
# restful_aws_lambda = {path= "./.."} # editable install used for pylambdarest development


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
